@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-02-18T01:05:52Z",
+  "timestamp" : "2025-02-19T01:06:09Z",
   "count_outdated" : 245,
   "uniques_outdated" : 213,
-  "count" : 246,
-  "uniques" : 214,
+  "count" : 247,
+  "uniques" : 215,
   "clones" : [
     {
       "timestamp": "2025-02-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
